--- a/package.json
+++ b/package.json
@@ -22,5 +22,12 @@
   },
   "dependencies": {
     "luxon": "^3.3.0"
-  }
+  },
+  "@babel/core": "7.19.6",
+"@babel/generator": "7.19.6",
+"@babel/compat-data": "7.19.4",
+"@babel/helper-compilation-targets": "7.19.3",
+"@babel/helper-create-class-features-plugin":"7.19.0",
+"@babel/helper-module-transforms":"7.19.6"
+  
 }
